thermo-api/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thermo-api
  namespace: thermo
  annotations:
    argocd.argoproj.io/compare-options: IgnoreExtraneous
spec:
  replicas: 1
  selector:
    matchLabels:
      app: thermo-api
  template:
    metadata:
      labels:
        app: thermo-api
    spec:
      containers:
        - name: thermo-api
          image: ghcr.io/proky7/thermo-api:latest
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
