thermo-api/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: thermo-api
  namespace: thermo
spec:
  selector:
    app: thermo-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
