thermo-api/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thermo-api
  namespace: thermo
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - thermo-api.p7d.cz
    secretName: thermo-api-tls
  rules:
  - host: thermo-api.p7d.cz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: thermo-api
            port:
              number: 80
